add ethan blog. empty

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<a href="./waterdrop/dist/index.html">Click To Play</a>
+<ul>
+  <li>
+    <a href="./ethan/blog/index.html">Ethan's Blog</a>
+  </li>
+
+  <li>
+    <a href="./waterdrop/dist/index.html">Click To Play</a>
+  </li>
+</ul>
